--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,10 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
+    "pinia": "^2.3.0",
     "qrcode": "^1.5.4",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.4.1",
     "xlsx": "^0.18.5"
   },
