--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY='django-secret-key'
+SECRET_KEY=''django-insecure-o*ms1-dhz@vgx(mm*nfvk5bw)#2^2!vycefatw9#cpmpsp2)f%''
 DEBUG=True
 SESSION_COOKIE_SECURE=False
 CSRF_COOKIE_SECURE=False
